--- a/learn.html
+++ b/learn.html
@@ -8,22 +8,29 @@
 </head>
 <body>
 
+  <!-- LEARN HERO -->
   <header class="learn-header">
-    <h1>Learn Baybayin</h1>
-    <p>Select a character to start practicing.</p>
+    <h1>Learn Baybayin with StrokeSense</h1>
+    <p>Click on a character to practice writing it.</p>
   </header>
 
+  <!-- LEARN GRID -->
   <section class="learn-grid">
-    <div class="learn-card">ᜀ (A)</div>
-    <div class="learn-card">ᜁ (I)</div>
-    <div class="learn-card">ᜂ (U)</div>
-    <div class="learn-card">ᜃ (Ka)</div>
-    <div class="learn-card">ᜇ (Da)</div>
-    <div class="learn-card">ᜄ (Ga)</div>
+    <div class="learn-card">ᜀ</div>
+    <div class="learn-card">ᜁ</div>
+    <div class="learn-card">ᜂ</div>
+    <div class="learn-card">ᜃ</div>
+    <div class="learn-card">ᜄ</div>
+    <div class="learn-card">ᜅ</div>
+    <div class="learn-card">ᜆ</div>
+    <div class="learn-card">ᜇ</div>
+    <div class="learn-card">ᜈ</div>
+    <!-- Add more Baybayin characters as needed -->
   </section>
 
+  <!-- BACK BUTTON -->
   <div class="back-btn-container">
-    <a href="index.html" class="back-btn">← Back to Home</a>
+    <a href="index.html" class="back-btn">Back to Home</a>
   </div>
 
 </body>
