--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div class="logo-container">
       <img src="strokesense-logo.png" alt="StrokeSense Logo">
     </div>
+
     <h1>Welcome to StrokeSense</h1>
     <p>The AI-powered way to practice and master Baybayin handwriting.</p>
+
+    <!-- BUTTON THAT GOES TO LEARN PAGE -->
     <a href="learn.html" class="cta">Start Learning</a>
   </header>
 
@@ -30,7 +33,7 @@
     <img src="strokesense-preview.png" alt="StrokeSense Preview">
   </section>
 
-  <!-- INFO / LEARN SECTION -->
+  <!-- INFO SECTION -->
   <section class="info">
     <h2>Why Choose StrokeSense?</h2>
     <p>StrokeSense is designed to make learning Baybayin both fun and effective. With its AI-powered feedback system, learners receive instant guidance on their strokes and letter formations, allowing them to correct mistakes in real-time and build confidence. The platform features interactive exercises, gamified challenges, and progress tracking to motivate learners and make consistent practice enjoyable. By blending technology with cultural heritage, StrokeSense not only helps users master the art of Baybayin handwriting but also fosters a deeper appreciation for Filipino history. Whether you’re a beginner or looking to refine your skills, StrokeSense provides the tools, support, and personalized learning experience to help you achieve mastery faster and more efficiently.</p>
